--- a/veggtable0708/css/style.css
+++ b/veggtable0708/css/style.css
@@ -114,6 +114,7 @@ p.sub-text{ text-align: center; font-size: 22px; font-weight: 700; line-height: 
 .event-method ul.day li h4{ background-color: #c35239; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; padding: 4px 10px; color: #f4f3f1; font-weight: 700; display: inline-block; }
 .event-method ul.day li p{ font-size: 18px; padding-top: 20px; font-weight: bold; font-weight: 500; }
 .event-method ul.day li p span.org{ color: #c35239; }
+.event-method ul.day li p span.org a{ color: #c35239; }
 .event-method .info-box{ width: 60%; float: right; }
 .event-method .img-add{ position: absolute; bottom: -20px; z-index: 10; left: 0;  width: 35%; max-width: 512px; }
 
@@ -127,6 +128,7 @@ p.sub-text{ text-align: center; font-size: 22px; font-weight: 700; line-height: 
 .event-menu-list .bannerBox .flexslider ul li{ background-position: center center; background-repeat: no-repeat; background-size: cover; }
 .event-menu-list .bannerBox .flexslider .flex-viewport{ -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; border: 6px solid #efe9d6;}
 .event-menu-list .bannerBox .flexslider .slides{ text-align: center; }
+.event-menu-list .bannerBox .flexslider .slides img{ -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; }
 .event-menu-list .bannerBox .flexslider .flex-control-nav{ bottom: -40px; }
 .event-menu-list .bannerBox .flexslider .flex-direction-nav a{ top:50%; width: 60px; height: 60px; display: block; text-indent: -9999px;  background-size: contain; background-position: center center; background-repeat: no-repeat; }
 .event-menu-list .bannerBox .flexslider .flex-direction-nav a:before{ display: none; content: ""; }
