--- a/iiot/app_web/admin/css/manager-standard-style.css
+++ b/iiot/app_web/admin/css/manager-standard-style.css
@@ -163,6 +163,22 @@ select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-a
 .fadebox .new_manager_pw p.note span{ color: #f44336; }
 .fadebox .new_manager_pw .infobox{ text-align: initial; }
 
+/*190705 新增*/
+.setting_list{ width: 100%; background-color: #ebebeb; min-height: 100vh;}
+.setting_list ul.list { padding:10px 15px; width: 100%; max-width:450px; margin: 0 auto;}
+.setting_list ul.list li{ margin:10px 8px; width:calc(100% - 16px); cursor: pointer; padding:7px 20px 7px 20px; background-color: #fff; border-radius: 50px; }
+.setting_list ul.list li p.l_title{ float: left; line-height: 24px; }
+.setting_list ul.list li p.r_text{ float: right; line-height: 24px; }
+.setting_list ul.list li .btn_swtich{ float: right; }
+.setting_list ul.list li .fillin_box{ float: right; width: 100%; max-width: calc(100% - 155px); padding: 0 5px;}
+.setting_list ul.list li .fillin_box input{ width: 100%; height: 24px; padding: 0 10px; line-height: 24px; text-align: right; font-size: 17px; font-weight: bold; }
+.setting_list ul.list li.bg_org{ background-color: #ffe5bf;}
+
+.setting_list .bottom_btn{  width: 100%; z-index: 1;  max-width: 300px; margin: 0 auto;}
+.setting_list .bottom_btn p.btn{ cursor: pointer; }
+.setting_list .bottom_btn p.btn a{ color: #fff; text-align: center; padding: 16px 15px; display: block; line-height:22px; background-color: #ff9900; border-radius: 40px;}
+.setting_list .bottom_btn p.btn a:active{ background-color: #ff7f47; color: #fff; }
+
 @media (max-width:1400px){
 	.the_productbox .products_box .right_info ul.products_list li{ width:calc(50% - 15px); }
 }
@@ -197,6 +213,10 @@ select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-a
 	.fadebox input{ font-size: 14px; }
 	.bottom_manager_tools{ text-align: left;}
 	.bottom_manager_tools p.btn{ font-size: 14px; }
+
+	.setting_list .bottom_btn{ max-width: initial; box-shadow: 5px 5px 5px rgba(0,0,0,.2); position: fixed; bottom: 0; left: 0; }
+	.setting_list .bottom_btn p.btn a{border-radius: 0;}
+	.setting_list ul.list{ padding-bottom: 54px;}
 }
 @media (max-width:400px){
 	.bottom_manager_tools p.btn{ font-size: 13px; }
