--- a/iiot/app_web/shop/css/style.css
+++ b/iiot/app_web/shop/css/style.css
@@ -59,7 +59,7 @@ select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-a
 .the_productbox .products_box ul.products_list li .product_info{ float: left; width: 100%; padding-left: 20px; position: relative; }
 .the_productbox .products_box ul.products_list li .product_info h3.product_title{ font-size: 15px; margin-bottom: 5px; display: block; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 1; line-height: 26px; height: 26px * 1; overflow:hidden;}
 .the_productbox .products_box ul.products_list li .product_info h4.sub_info{ font-size: 13px; height: 46px; text-align: justify; color: #888; display: block; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; line-height: 21px; height: 21px * 2; overflow:hidden; }
-.the_productbox .products_box ul.products_list li .product_info p.money{ font-size: 15px;  color: #fe4513; position: absolute; bottom: 8px; left: 20px; width: 100%; }
+.the_productbox .products_box ul.products_list li .product_info p.money{ font-size: 15px;  color: #fe4513; position: absolute; bottom: 8px; left: 20px;}
 .the_productbox .products_box ul.products_list li.the_selected{ border-color: #ffcd00; }
 
 .input_quantity{width: 100%; margin: 0 auto; text-align: right; padding-top: 7px; min-height: 33px;}
@@ -102,6 +102,7 @@ select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-a
 .shopping_order .the_button a.btn{ margin: 0 5px; }
 
 
+
 .fadebox{ width: 100% !important; }
 .fadebox input{ width: 100%; max-width: 500px; border:1px solid #fff; padding: 0 15px; margin: 0 auto; text-align: center; font-size: 15px; border-radius: 50px; height: 40px; background-color: #f8f8f8;}
 .fadebox textarea{ width: 100%; max-width: 400px; min-height: 90px; padding: 10px 15px; margin: 10px auto; font-size: 15px; border-radius: 8px; background-color: #f0f0f0;}
@@ -136,8 +137,9 @@ select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-a
 .shopping_cart{ max-width: 1000px !important; margin: 0 auto; }
 .shopping_cart h3.top_title{ text-align: center; padding: 20px 0 15px; font-size: 18px; font-weight: bold; }
 .shopping_cart h3.top_title span{ font-size: 14px; color: #888;  display: block; font-weight: normal; padding-top: 5px;}
-.shopping_cart p.quantity_products{text-align: center; padding-bottom: 20px; font-size: 14px; line-height: 28px; color: #666666; }
-.shopping_cart p.quantity_products span{ color: #fe4513; padding: 0 5px; font-size: 18px;}
+.fadebox p.quantity_products, .fadebox p.sub_title{text-align: center; padding-bottom: 20px; font-size: 14px; line-height: 28px; color: #666666; }
+.fadebox p.quantity_products span,  .fadebox p.sub_title span{ color: #fe4513; padding: 0 5px; font-size: 18px;}
+.fadebox p.sub_title{ padding-bottom: 10px;}
 
 .shop_mainbox .top_step{ width: 100%; top: 0; z-index: 10; position: sticky; position: -webkit-sticky; position: -moz-sticky; position: -ms-sticky; position: -o-sticky; border-bottom: 2px solid #eaeaea;}
 .shop_mainbox .top_step ul{ width: 100%; background-color: #fff; }
@@ -152,10 +154,11 @@ select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-a
 ul.shopping_car_list{padding-bottom: 25px;}
 ul.shopping_car_list .sbox{ float: left; width: 20%; padding: 10px 0; min-height: 95px;  border-bottom: 1px solid #f5f5f5;text-align: center;  display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center}
 ul.shopping_car_list .top_title .sbox{ min-height: inherit; background-color: #f5f5f5; border-top: 1px solid #e4e4e4;}
-ul.shopping_car_list .car_name{width:calc(65% - 160px);}
+ul.shopping_car_list .car_name{width:calc(65% - 160px); vertical-align: top; display: inline-block;}
 ul.shopping_car_list .car_name p.product_name{ text-align:left; float: left; padding: 5px; width: 100%; max-width: calc(100% - 90px);}
-ul.shopping_car_list .car_name p.product_name span.mainTitle{ font-weight: bold; display: block; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 1; line-height: 20px; height: 20px * 1; overflow:hidden;}
-ul.shopping_car_list .car_name p.product_name span.style_for{color: #666; font-size: 13px; margin:  5px 0; display: inline-block; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 1; line-height: 17px; height: 17px * 1; overflow:hidden;}
+ul.shopping_car_list .car_name p.product_name span.mainTitle{ font-weight: bold; display: block; display: -webkit-box;  -webkit-box-orient: vertical; -webkit-line-clamp: 1; line-height: 20px; height: 20px * 1; overflow:hidden;}
+ul.shopping_car_list .car_name p.product_name span.style_for{color: #666; font-size: 13px; margin-bottom: 5px; display: inline-block; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 1; line-height: 17px; height: 17px * 1; overflow:hidden;}
+ul.shopping_car_list .car_name p.product_name span.other{color: #999; font-size: 13px; margin-bottom: 8px; display: inline-block;}
 ul.shopping_car_list .car_name p.product_name span.money{ display: block; font-size: 13px;}
 ul.shopping_car_list .car_name .photo{ width: 70px; height: 70px; display: block; float: left; border-radius: 50%; background-repeat: no-repeat; background-position: center center; background-size: cover; margin-right: 8px; }
 ul.shopping_car_list .car_nb{ width: 160px; }
@@ -242,6 +245,27 @@ ul.order_list_done li.buy_list span.r_nb{ width:110px; text-align: right;}
 ul.order_list_done li.width_f p{ text-align: center; padding: 10px 0; color: #e85718; font-weight: bold; background-color: #fff7f7; border-radius: 10px;}
 ul.order_list_done li p.s_f{ font-size: 12px; color: #666; }
 
+
+/*品項多選單選*/
+ul.option_list{ width: 100%; text-align: center; padding-bottom: 15px; }
+ul.option_list li{ display: inline-block; margin:0px 4px 5px 0; float: left; }
+ul.option_list input[type=checkbox], ul.option_list input[type=radio]{ visibility:hidden; width: initial; max-width:initial; height: initial; border:none; border-radius: initial; padding: 0;}
+
+ul.option_list .the_radio{ position: relative; }
+ul.option_list .the_radio label,
+ul.option_list .the_checkbox label { border:1.5px solid #d2d2d2; color:#555; position:relative; font-size: medium; display: inline-block; border-radius:40px; cursor: pointer;z-index: 1; padding:4px 15px; font-size: 13px;}
+ul.option_list .the_radio input[type=radio]:checked + label, ul.option_list .the_checkbox input[type=checkbox]:checked + label {border-color: #ff9800;  color:#fff; background-color: #ff9800;}
+.food_items{ padding: 15px !important; }
+.food_items h3.top_title{ text-align: left; padding-bottom: 10px; }
+.food_items h3.top_title span{ display: block; }
+.food_items h3.top_title span.must{ color: #ff5722; padding-right: 5px; display: inline-block;  }
+.food_items h3.top_title i{ padding-left: 10px; font-size: 19px}
+.food_items p.sub_title{ text-align: left; font-size: 13px; }
+.food_items .the_button{ padding-bottom: 20px ;}
+.food_items p.order_title{ font-weight: bold; font-size: 16.5px; border-bottom: 1px solid #d8d8d8; text-align: center; padding-bottom: 12px; }
+
+/*品項多選單選*/
+
 @media screen and (-ms-high-contrast: active),(-ms-high-contrast: none){
 	ul.shopping_car_list .car_delete a.yesDelets{ top:0px;}
 }
@@ -266,6 +290,7 @@ ul.order_list_done li p.s_f{ font-size: 12px; color: #666; }
 }
 @media (max-width:750px){
 	.fadebox h3.top_title{ font-size: 17px; }
+	.food_items h3.top_title{ font-size:15px; }
 	.shop_mainbox .top_step ul li{padding: 15px 0;}
 	.shop_mainbox .top_step ul li p{ font-size: 14px; }
 	.the_productbox .products_box .right_info{width: calc(100% - 135px);}
@@ -277,7 +302,7 @@ ul.order_list_done li p.s_f{ font-size: 12px; color: #666; }
 	.the_productbox .products_box ul.products_list li{ width: calc(50% - 15px); padding:50px 12px 10px 12px; margin:40px 7.5px 25px 7.5px; }
 	.the_productbox .products_box ul.products_list li .photo{  margin-top: -25px; left: calc(50% - 50px);  }
 	.the_productbox .products_box ul.products_list li .product_info{ padding-top: 35px;}
-	.the_productbox .products_box ul.products_list li .product_info p.money{ text-align: center; bottom: initial; top: 5px; }
+	.the_productbox .products_box ul.products_list li .product_info p.money{ text-align: center; bottom: initial; top: 5px;  width: 100%; }
 	.the_productbox .products_box ul.products_list li .product_info h3.product_title{ text-align: center; }
 	.shopping_order .the_button{ padding: 5px 0; }
 }
