--- a/iiot/app_web/shop- takeapart/css/standard-flow.css
+++ b/iiot/app_web/shop- takeapart/css/standard-flow.css
@@ -217,10 +217,13 @@ ul.shopping_car_list .car_delete a:hover{ color: #e85718; }
 .fadebox{ width: 100% !important; }
 .fadebox h3.top_title{ text-align: center; padding: 20px 0 15px; font-size: 18px; font-weight: bold; }
 .fadebox .verification input{ font-size: 13.5px; }
-.fadebox .verification .both{ padding: 16px 0 8px; }
-.fadebox .verification .both input{ float: left; width : calc(40% - 10px); margin-left: 10px; }
-.fadebox .verification .both button.btn{ float: left; color: #936f6f; font-size: 13.5px; width: 60%; line-height: 36px; padding: 0; display: block; background-color: #fffff0; border-radius: 40px; border:1px solid #f0e599; }
-.fadebox .verification a{ text-align: right; color: #03a9f4; font-size: 13px;}
+.fadebox .verification .both{ padding: 10px 0 0 0; border-bottom: 2px solid #f0f0f0; position: relative; }
+.fadebox .verification .both input{ width: 100%; border-radius: 0; background-color: transparent; text-align: left; padding: 5px 10px; font-size: 16px; font-weight: bold;}
+.fadebox .verification .both input::placeholder{ color: #9e9e9e; font-weight: normal; font-size: 13px;}
+.fadebox .verification .both input:focus{ border-color: #fff; }
+.fadebox .verification .both button.btn{ position: absolute; top: 12px; right: 0px; color: #936f6f; font-size: 12px; line-height: 28px; padding: 0 10px; display: block; background-color: #fffff0; border-radius: 4px; border:1px solid #f0e599; }
+.fadebox .verification a{ text-align: left; color: #4caf50; display: inline-block; font-size: 12px; padding: 10px 0 5px 10px;}
+.fadebox .verification a:hover{ text-decoration: underline; }
 
 .order_list{ width: 100%; padding: 0 15px; margin: 0 auto; padding-bottom: 25px;}
 .order_list .sbox{ width:25%; padding: 10px 0; vertical-align: middle; font-weight: inherit; /* min-height: 45px;*/  border-bottom: 1px solid #f5f5f5; }
