--- a/iiot/app_web/shop- takeapart/css/standard-flow.css
+++ b/iiot/app_web/shop- takeapart/css/standard-flow.css
@@ -149,6 +149,8 @@ select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-a
 .shop_mainbox .top_step ul li.btn_in p{ color: #333; }
 .shop_mainbox .top_step ul li.btn_in p span{ color: #e85718; }
 
+.shop_mainbox .other_remarks .top_step ul li{ float: none; margin: 0 auto;}
+
 ul.shopping_car_list{padding-bottom: 25px;}
 ul.shopping_car_list .sbox{ float: left; width: 25%; padding: 10px 0; min-height: 95px;  border-bottom: 1px solid #f5f5f5;text-align: center;  display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center}
 ul.shopping_car_list .top_title .sbox{ min-height: inherit; background-color: #f5f5f5; border-top: 1px solid #e4e4e4;}
