--- a/iiot/app_web/shop- takeapart/css/style-menu.css
+++ b/iiot/app_web/shop- takeapart/css/style-menu.css
@@ -130,6 +130,10 @@ select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-a
 .fadebox .category_list .sequence a{ color: #4a4a4a; cursor: pointer; margin: 0 2px; border:1px solid #d3d3d3; min-width: 41px; height: 41px; font-size: 13px; padding: 0px 12px; /*background-color: #e9e9e9;*/ display: inline-block; border-radius: 50px; text-align: center; line-height: 41px; }
 .fadebox .category_list .sequence a.disabled{ color: #999;  cursor: no-drop;}
 
+.fadebox .notice_content h3.top_title{ font-size: 18px; padding: 10px 0 15px 0; }
+.fadebox .notice_content p.info{ font-size: 12px; }
+
+
 .fadebox .infobox{ background-color: #f0f0f0; padding: 15px; border-radius: 8px; text-align: center;}
 .fadebox .infobox p { line-height: 24px;}
 .fadebox .infobox p span{ color: #ff9900; }
@@ -272,7 +276,7 @@ ul.option_list .the_radio input[type=radio]:checked + label, ul.option_list .the
     .shopping_order .the_button{ padding: 5px 0; }
     .btn_buy button.btn_order{  display: block; float: none; margin: 0 auto; }
     .the_productbox .products_box ul.products_list li .product_info h4.sub_info{ text-align: center; line-height: 18px; height: 18px * 2; margin-bottom: 4px; height: 38px}
-    .the_productbox .products_box ul.products_list li .product_info p.product_inventory{ font-size: 12px; text-align: center; float: none; }
+    .the_productbox .products_box ul.products_list li .product_info p.product_inventory{ font-size: 12px; text-align: center; float: none; padding: 0; }
     .the_productbox .products_box ul.products_list li p.buy_nb{ font-size: 13px; left:calc(50% + 20px); top: 15px; }
 }
 @media (max-width:650px){
